[gd_scene load_steps=5 format=3 uid="uid://b3rdfj4s88wkc"]

[ext_resource type="ArrayMesh" uid="uid://bsrgncwvo52po" path="res://assets/models/weapon_cannon.obj" id="1_ohx3i"]
[ext_resource type="Script" path="res://scripts/cannon.gd" id="1_r7sem"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ftvki"]
size = Vector3(1, 0.0762329, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_si3jw"]
radius = 1.83439

[node name="Cannon" type="StaticBody3D"]
script = ExtResource("1_r7sem")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = ExtResource("1_ohx3i")

[node name="Aim" type="Marker3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.27, 0.3)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0126038, 0)
shape = SubResource("BoxShape3D_ftvki")

[node name="MobDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.27, 0.3)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MobDetector"]
shape = SubResource("SphereShape3D_si3jw")

[node name="BulletContainer" type="Node" parent="."]

[node name="ShootingCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="body_exited" from="MobDetector" to="." method="_on_mob_detector_body_exited"]
[connection signal="timeout" from="ShootingCooldown" to="." method="_on_shooting_cooldown_timeout"]
